--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -117,9 +117,7 @@ main {
   padding: 2em 1em;
   margin-bottom: 1.5em;
 }
-main article img{
 
-}
 @media screen and (min-width: 700px) {
   main {
     padding: 2em;
@@ -210,6 +208,12 @@ h1 + p {
 @media screen and (min-width: 500px) {
   h1 {
     font-size: 3rem;
+  }
+
+  header{
+    position: sticky;
+    top: 0;
+    z-index: 999;
   }
 
   p,
@@ -326,7 +330,7 @@ table {
 }
       
 
-  }
+  
 
 @media screen and (min-width: 700px) {
   table {
@@ -433,12 +437,38 @@ footer {
 @media screen and (min-width: 800px) {
   footer {
     padding: 1em 12em;
-  }
+  }.clearfix h1{
+  margin-right: 41%;
+}
+.sottolineato{
+  display: block;
+  width: 515px;
+  opacity: 60%;
+  margin-top: -47px;
+  margin-bottom: 30px;
+}
+table{
+  margin-inline: auto;
+}
+#calendar{
+margin-bottom: 569px;
+z-index: 1002;
+}
+#plus{
+  margin-bottom: 487px;
+z-index: 1002;
+}
+section h2{
+  height: 28%;
+width: 18%;
+}
+
 }
 
 footer a {
   color: fuchsia;
 }
+
 
 @media screen and (min-width: 1200px) {
   header,
@@ -448,6 +478,19 @@ footer a {
     margin-left: auto;
     margin-right: auto;
   }
+  #calendar{
+    margin-bottom: 569px;
+    z-index: 1002;
+    }
+    #plus{
+      margin-bottom: 487px;
+    z-index: 1002;
+    }
+    section h2{
+      height: 28%;
+    width: 18%;
+    }
+  
 }
 
 @media print {
