--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -51,10 +51,30 @@ header {
   margin-bottom: 1.5em;
   padding: 2em 1.5em;
 }
+@media screen and (min-width: 500px) {
+  header{
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+  }
+
+@media screen and (min-width: 700px) {
+  header{
+    position: sticky;
+    top: 0;
+    z-index: 999;
+  }
+}
 
 @media screen and (min-width: 800px) {
   header {
     padding: 1em;
+  }
+  header{
+    position: sticky;
+    top: 0;
+    z-index: 999;
   }
 
   }
@@ -139,11 +159,7 @@ main {
   article img:nth-of-type(2){
   float: left;
   }
-  header{
-    position: sticky;
-    top: 0;
-    z-index: 999;
-  }
+  
   section h2{
     position: absolute;
     top: 0;
@@ -208,12 +224,6 @@ h1 + p {
 @media screen and (min-width: 500px) {
   h1 {
     font-size: 3rem;
-  }
-
-  header{
-    position: sticky;
-    top: 0;
-    z-index: 999;
   }
 
   p,
